# StreamSRT2

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/streamsrt2/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  srt-lib.cpp
app/src/main/java/com/example/streamsrt2/: CameraManager.kt  MainActivity.kt  SrtManager.kt  SrtNative.kt
app/src/main/java/com/example/streamsrt2/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/streamsrt2/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
